# ASCII-Menus

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
ASCII_Menus/: Coordinate_System.py  Menu.py  __init__.py
Planning/: Structure.md  color-palet.md  design_coordinate_system.md  design_menu.md  desing_menu.md  project.md  structure.md
README/: Project.md
src/ASCII_Menus/: __init__.py
test/: manual_test.py
tests/: manual_test.py  test_automatic.py
